KAlarm Change Log

=== Version 2.80.0 (KDE Applications 20.08 beta) --- 30 June 2020 ===
+ Default to using file system resources instead of Akonadi resources.
+ Enable selection of multiple calendar files in Import Alarms dialogue.
+ Show alarm calendars sorted by name in calendars list.
+ Return to last used tab in Configuration dialogue when it is reopened.
+ Fix handling of calendar update or save errors when making alarm changes.
+ Fix possible calendar file corruption if disk is full (requires KDE Frameworks 5.72) [KDE Bug 370708]
+ Allow drag-and-drop of email onto display alarm text edit field.
+ Fix drag-and-drop of text onto line edits in alarm edit dialogue.
+ Refactor AlarmCalendar to split out resources and display calendars.

=== Version 2.14.3 (KDE Applications 20.04.3) --- 19 June 2020 ===
+ Fix possible corruption of autostart.desktop file if disk is full.

=== Version 2.14.2 (KDE Applications 20.04.2) --- 8 June 2020 ===
+ Make multiple KAlarm invocations work (Qt >5.12, Frameworks >5.60) [KDE Bug 417108]
+ Fix failure to set no-autostart for non-KDE desktops, if a writable autostart file exists.
* Fix failure to execute command alarms in a terminal window.
+ Fix occasional crash on opening alarm edit dialogue [KDE Bug 412181]
+ Fix wrong Undo/Redo being performed when selected from list (fixes regression introduced in 2.13.0).

=== Version 2.14.1 (KDE Applications 20.04.1) --- 11 May 2020 ===
+ Correctly interpret resource IDs in command line and DBus calls.
+ Fix sizing and reconfiguration of columns in alarm and template lists.

=== Version 2.14.0 (KDE Applications 20.04) --- 27 March 2020 ===
+ Warn user if archiving but no default archived alarms calendar is set.
+ Fix some error messages not being displayed.
+ Refactor to use generic resource classes (part 2).

=== Version 2.13.3 (KDE Applications 19.12.3) --- 20 February 2020 ===
+ Fix failure of command line options requiring calendar access [KDE Bug 417108]
